# tacho

./: CHANGES.md  Cargo.toml  README.md
.circleci/: config.yml
examples/: multithread.rs  multithread_counter.rs  multithread_gauge.rs  multithread_stat.rs  simple.rs
src/: admin.rs  aggregator.rs  counter.rs  gauge.rs  key.rs  lib.rs  metrics.rs  prometheus.rs  recorder.rs  report.rs  reporter.rs  scope.rs  timer.rs  timing.rs
