[package]
name = "tacho"
description = "Tokio-aware metrics library."
version = "0.2.0"
authors = ["Steve Jenson <stevej@buoyant.io>",
           "Oliver Gould <oliver@buoyant.io>"]
repository = "https://github.com/BuoyantIO/tacho"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
futures = "0.1"
tokio-timer = "0.1"
hdrsample = "3.0"
twox-hash = "1.0"
log = "0.3"

[dev-dependencies]
tokio-core = "0.1"
pretty_env_logger = "0.1"
